<resources>
    <string name="app_name">GoCorona</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="news">News</string>
    <string name="global_updates">Global Updates</string>
    <string name="covid19">COVID&#8211;19</string>
    <string name="select_langugae">Select Language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--Precaution Strings-->
    <string name="precautions">Precautions</string>
    <string name="precaution1">Stay away from people and maintain social distancing.</string>
    <string name="precaution2">Wash your hands frequently with soap, at least for 20 seconds.</string>
    <string name="precaution3">Avoid frequently touching your nose,eyes and face.</string>
    <string name="precaution4">Stay at home if you feel sick.</string>
    <string name="precaution5">Use handkerchief while sneezing and coughing.</string>

    <!--Symptoms String-->
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_heading">COVID&#8211;19 symptoms range from mild to severe.
        It takes 2&#8211;14 days after exposure for symptoms to develop. Symptoms may include:</string>
    <string name="symptom1">Fever</string>
    <string name="symptom2">Cough</string>
    <string name="symptom3">Shortness of breath or difficulty breathing</string>
    <string name="symptom4">Tiredness</string>
    <string name="symptom5">Aches</string>
    <string name="symptom6">Runny nose</string>
    <string name="symptom7">Sore throat</string>
    <string name="total_cases">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="search_by_country">Search by country</string>

    <!--Share Strings-->
    <string name="share_app">I recommend the GoCorona Android application to get the latest information and updates about the Corona Virus(COVID-19),
        from India and all Corona affected countries of the world. \nIt also helps you with Symptoms, Precautions and
        other important information. \n\nGoCorona application is available in english, marathi and hindi languages.
        \n\n Download Link:- \nhttp://fourthquadrant.comli.com/androidapp/gocorona/gocorona.apk
    </string>
    <string name="New">New</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="check_internet_connection">Check internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="india_updates">India Updates</string>
    <string name="search_by_state">Search by state</string>
    <string name="v">v</string>
    <string name="next" translatable="false">Next</string>
    <string name="start" translatable="false">Start</string>
    <string name="wear_mask" translatable="false">Wear Mask</string>
    <string name="wear_mask_desc" translatable="false">While stepping out, wear mask and cover your face to stay away from the COVID-19 infection.</string>
    <string name="work_from_home" translatable="false">Work From Home</string>
    <string name="work_from_home_desc" translatable="false">Working from home will create the safe and happy workplace for you.</string>
    <string name="consult_with_doctor" translatable="false">Consult With Doctor</string>
    <string name="consult_with_doctor_desc" translatable="false">Consult with doctor if you are feeling sick, it can ensure safety of your and other\'s health too.</string>
</resources>
