<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivFlag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_circle_placeholder"
        app:layout_constraintBottom_toBottomOf="@id/tvRecovered"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCountryName"
        app:srcCompat="@drawable/ic_circle_placeholder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivFlag"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="India" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalCasesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:text="@string/total_cases"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivFlag"
        app:layout_constraintTop_toBottomOf="@id/tvCountryName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tvTodayCasesLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTotalCasesLabel"
        app:layout_constraintTop_toBottomOf="@id/tvCountryName"
        tools:text="1234" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTodayCasesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:text="@string/New"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tvTodayCases"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTotalCases"
        app:layout_constraintTop_toBottomOf="@id/tvCountryName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTodayCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTodayCasesLabel"
        app:layout_constraintTop_toTopOf="@id/tvTodayCasesLabel"
        tools:text="1234333333" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRecoveredLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:text="@string/recovered"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivFlag"
        app:layout_constraintTop_toBottomOf="@id/tvTotalCasesLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRecovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tvRecoveredLabel"
        app:layout_constraintEnd_toStartOf="@id/tvDeathsLabel"
        app:layout_constraintStart_toEndOf="@+id/tvRecoveredLabel"
        app:layout_constraintTop_toTopOf="@id/tvRecoveredLabel"
        tools:text="1234" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeathsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:text="@string/deaths"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tvRecovered"
        app:layout_constraintEnd_toStartOf="@id/tvDeaths"
        app:layout_constraintStart_toStartOf="@id/tvTodayCasesLabel"
        app:layout_constraintTop_toTopOf="@id/tvRecovered" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:lines="1"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tvDeathsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDeathsLabel"
        app:layout_constraintTop_toTopOf="@id/tvDeathsLabel"
        tools:text="0" />


    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvRecoveredLabel"
        app:layout_constraintTop_toBottomOf="@id/tvRecovered" />

</androidx.constraintlayout.widget.ConstraintLayout>